--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,8 @@
-{% load static %}
-
-<footer>
-    <strong>Copyright &copy; 2018 <a href="{% url 'home' %}">Codeforces Filter</a>.</strong> All rights reserved.
+<footer class="footer">
+        <span class="text-left">
+            <a href="#">Codeforces Filter</a> © 2018.
+        </span>
+        <span class="float-xs-right">
+            Powered by <a href="#">Codeforces Filter</a>
+        </span>
 </footer>
