--- a/templates/topnavbar.html
+++ b/templates/topnavbar.html
@@ -1,9 +1,4 @@
-{% load static %}
+{% load staticfiles %}
+    <header class="navbar">
 
-<header class="main-header">
-    <!-- Logo -->
-    <a href="" class="logo">
-        <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg">Codeforces Filter</span>
-    </a>
-</header>
+    </header>
