--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-sm-8 col-xs-8 col-xl-8">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover text-center">
                                 <thead>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4 col-xl-4">
                     <h2> Filter By</h2>
                     <p><strong>Select Div </strong></p>
                     <select class="form-control">
@@ -39,7 +39,7 @@
                         <option>Div2</option>
 
                     </select>
-                    <br>
+                <br>
                     <p><strong>Select Problem Number</strong></p>
                     <select class="form-control">
 
@@ -59,7 +59,8 @@
                         <option>Greedy</option>
 
                     </select>
-
+                    <br>
+                <button type="button" class="btn btn-primary">Filter</button>
                 </div>
             </div>
         </div>
