--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
                         <option>E</option>
                     </select>
                     <br>
-                    <p><strong>Select tags</strong></p>
+                    <p><strong>Select Tags</strong></p>
                     <select class="form-control">
 
                         <option>Math</option>
