--- a/templates/home.html
+++ b/templates/home.html
@@ -2,15 +2,15 @@
 
 {% block content %}
 <div class="row">
-    <div class="container-fluid">
+    <div class="container-fluid text-primary">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
                     <div class="col-md-8 col-sm-8 col-xs-8 col-xl-8">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover text-center">
-                                <thead>
-                                <tr class="info">
+                                <thead class="text-white bg-primary">
+                                <tr >
                                     <th class="text-center">#</th>
                                     <th class="text-center">Problem</th>
                                 </tr>
@@ -60,7 +60,9 @@
 
                     </select>
                     <br>
-                <button type="button" class="btn btn-primary">Filter</button>
+                <button type="button" class="btn btn-primary">
+                    <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
+                    Filter</button>
                 </div>
             </div>
         </div>
