updated license and implemented filtering

--- a/templates/topnavbar.html
+++ b/templates/topnavbar.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
-    <header class="navbar">
+<header class="navbar">
+    <div class="container-fluid">
 
-    </header>
+    </div>
+</header>
