--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,16 @@
 <footer class="footer">
-        <span class="text-left">
-            <a href="#">Codeforces Filter</a> © 2018.
-        </span>
-        <span class="float-xs-right">
-            Powered by <a href="#">Codeforces Filter</a>
-        </span>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <span class="text-center">
+                    <a href="#">Codeforces Filter</a> © 2018.
+                </span>
+                <span class="float-xs-right">
+                    All rights reserved by <a href="#">Codeforces Filter</a>
+                </span>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
 </footer>
