--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,13 @@
     <div class="container-fluid text-primary">
         <div class="col-md-12">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header"></div>
+                <div class="card-block">
                     <div class="col-md-8 col-sm-8 col-xs-8 col-xl-8">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover text-center">
                                 <thead class="text-white bg-primary">
-                                <tr >
+                                <tr>
                                     <th class="text-center">#</th>
                                     <th class="text-center">Problem</th>
                                 </tr>
@@ -28,42 +29,55 @@
                             </table>
                         </div>
                     </div>
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <div class="col-md-4 col-sm-4 col-xs-4 col-xl-4">
+                            <h2> Filter By</h2>
+                            <div class="form-group">
+                                <p><strong>Division</strong></p>
+                                <select class="form-control" name="division">
+
+                                    <option value="" selected>--------</option>
+                                    {% for d in divisions %}
+                                    <option value="{{ d.number }}">{{ d.name }}</option>
+                                    {% endfor %}
+
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <p><strong>Problem Index</strong></p>
+                                <select class="form-control" name="index">
+
+                                    <option value="" selected>--------</option>
+                                    {% for i in indexes %}
+                                    <option value="{{ i.index }}">{{ i.index }}</option>
+                                    {% endfor %}
+
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <p><strong>Tags</strong></p>
+
+                                {% for t in tags %}
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="tags" value="{{ t.id }}">{{ t.name|title }}
+                                    </label>
+                                </div>
+                                {% endfor %}
+
+                            </div>
+
+                            <button type="submit" class="btn btn-primary pull-right">
+                                <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
+                                Filter
+                            </button>
+                        </div>
+                    </form>
                 </div>
-
-                <div class="col-md-4 col-sm-4 col-xs-4 col-xl-4">
-                    <h2> Filter By</h2>
-                    <p><strong>Select Div </strong></p>
-                    <select class="form-control">
-
-                        <option>Div1</option>
-                        <option>Div2</option>
-
-                    </select>
-                <br>
-                    <p><strong>Select Problem Number</strong></p>
-                    <select class="form-control">
-
-                        <option>A</option>
-                        <option>B</option>
-                        <option>C</option>
-                        <option>D</option>
-                        <option>E</option>
-                    </select>
-                    <br>
-                    <p><strong>Select Tags</strong></p>
-                    <select class="form-control">
-
-                        <option>Math</option>
-                        <option>Ad-Hoc</option>
-                        <option>DP</option>
-                        <option>Greedy</option>
-
-                    </select>
-                    <br>
-                <button type="button" class="btn btn-primary">
-                    <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
-                    Filter</button>
-                </div>
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
@@ -78,7 +92,6 @@
 
 
     });
-
 
 </script>
 {% endblock %}
